# vllm-lite

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  MIGRATING.md  OPERATIONS.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml  justfile  layout.md  rust-toolchain.toml  spec.md
crates/core/: Cargo.toml
crates/core/benches/: latency_percentiles.rs  multi_draft_speculative.rs  optimization_benchmarks.rs  prefix_cache_benchmarks.rs  radix_cache.rs  scheduler.rs  scheduler_benchmarks.rs  speculative_vs_baseline.rs
crates/core/src/: beam.rs  cuda_graph.rs  engine.rs  error.rs  health.rs  kv_cache.rs  lib.rs  metrics.rs  sampling.rs  scheduler.rs  sync.rs  tensor_parallel.rs  tracing_init.rs  types.rs
crates/core/src/circuit_breaker/: breaker.rs  mod.rs  strategy.rs
crates/core/src/engine/: batch.rs  beam.rs  ctor.rs  cuda_graph.rs  distributed_kv.rs  draft_management.rs  graph_step.rs  lifecycle.rs  mod.rs  paged_kv_cache.rs  run.rs  speculative.rs  tests.rs
crates/core/src/error/: mod.rs  recovery.rs
crates/core/src/ha/: failover.rs  leader_election.rs  mod.rs
crates/core/src/kv_cache/: block_allocator.rs  mod.rs  prefix_cache.rs
crates/core/src/metrics/: collector.rs  enhanced.rs  exporter.rs  legacy.rs  lock_free.rs  mod.rs  types.rs
crates/core/src/routing/: hash_router.rs  mod.rs
crates/core/src/sampling/: prop_tests.rs  tests.rs
crates/core/src/scheduler/: action_executor.rs  actions.rs  batch.rs  batch_composer.rs  batch_planner.rs  cuda_graph.rs  engine.rs  engine_v2.rs  event_handler.rs  events.rs  eviction.rs  legacy_adapter.rs  mod.rs  observer.rs  packing.rs  phase_scheduler.rs  predictive_batching.rs  preemption.rs  queue.rs  queue_manager.rs  request_queue.rs  scheduler.rs  state.rs  stats.rs
crates/core/src/speculative/: adaptive.rs  config.rs  draft_registry.rs  draft_resolver.rs  memory_budget.rs  mod.rs  model.rs  self_spec.rs  strategy.rs  verifier.rs
crates/core/src/types/: adaptive_draft.rs  messages.rs  mod.rs  request.rs  sampling.rs  scheduler_config.rs  sequence.rs  sequence_packing.rs
crates/core/tests/: adaptive_speculative.rs  beam.rs  cuda_graph_integration.rs  distributed_kv_integration.rs  e2e_concurrent.rs  e2e_error_recovery.rs  e2e_graceful_shutdown.rs  e2e_lifecycle.rs  e2e_request_lifecycle.rs  engine_trace.rs  engine_v18_wiring.rs  engine_wiring.rs  error_handling.rs  integration.rs  multi_draft_integration.rs  observer.rs  packing_integration.rs  prefix_cache.rs  prefix_cache_refcount.rs  resource_limits.rs  sampling.rs  sampling_params.rs  scheduler.rs  scheduler_functional.rs  scheduler_integration.rs  scheduler_refactored.rs  scheduler_v2_integration.rs  speculative_kv_cache.rs  speculative_memory_overhead.rs
crates/core/tests/common/: mod.rs
crates/model/: Cargo.toml
crates/model/benches/: flash_attention.rs  gqa_forward.rs  mla_forward.rs  paged_kv_cache.rs
crates/model/src/: causal_lm.rs  config.rs  fake.rs  flash_attention.rs  kv_cache.rs  lib.rs  loader.rs  quantize.rs  qwen3.rs  qwen3_config.rs  registry.rs  tokenizer.rs
crates/model/src/arch/: capabilities.rs  mod.rs  registry.rs  stub.rs
crates/model/src/causal_lm/: block_wrapper.rs  hybrid_lm.rs  layer_loop.rs  mod.rs  model.rs  tests.rs  weights.rs
crates/model/src/components/: attention.rs  block.rs  decoder_block.rs  fused_kernel.rs  kv_cache_fp8.rs  mlp.rs  mod.rs  norm.rs  positional.rs  ssm.rs  vision.rs
crates/model/src/config/: architecture.rs  errors.rs  hyperparams.rs  mod.rs  model_config.rs
crates/model/src/gemma3/: arch.rs  mod.rs  register.rs
crates/model/src/gemma4/: arch.rs  attention.rs  block.rs  mlp.rs  mod.rs  model.rs  register.rs  rope.rs
crates/model/src/kernels/: cuda_graph.rs  flash_attention.rs  fused_mlp.rs  mod.rs
crates/model/src/llama/: arch.rs  block.rs  mod.rs  model.rs  register.rs
crates/model/src/llama4/: arch.rs  mod.rs  register.rs
crates/model/src/loader/: builder.rs  checkpoint.rs  error.rs  format.rs  io.rs  mod.rs
crates/model/src/mistral/: arch.rs  block.rs  mod.rs  model.rs  register.rs
crates/model/src/mistral_small/: arch.rs  mod.rs  register.rs
crates/model/src/mixtral/: arch.rs  block.rs  (+4 more)
crates/model/tests/: arch_checkpoint_smoke.rs  architecture_smoke.rs  attention.rs  attention_batch_benchmark.rs  checkpoint_loading_tests.rs  fake_model.rs  gqa_shape_tests.rs  kv_cache_batch.rs  logits.rs  model.rs  paged_kv_cache_wrapper_e2e.rs  qwen35_model_tests.rs  qwen35_speculative_tests.rs  qwen3_config.rs  qwen3_integration.rs  qwen3_model_tests.rs  qwen3_rope.rs  qwen3_token_pipeline.rs  ssm_optimization_tests.rs  tiled_attention.rs  tiled_attention_test.rs  token_verification.rs  tokenizer_verification.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  backpressure.rs  cli.rs  config.rs  debug.rs  draft_loader.rs  health.rs  health_handlers.rs  lib.rs  logging.rs  main.rs  test_fixtures.rs
crates/server/tests/: admin_gating.rs  audit_integration.rs  audit_middleware_wiring.rs  body_limit_wiring.rs  cancel_propagation.rs  chat_integration_test.rs  context_length.rs  correlation_id_middleware.rs  cors_wiring.rs  embeddings_capability.rs  error_contract.rs  metrics_wiring.rs  models_handler_test.rs  otlp_exporter_integration.rs  otlp_stub_collector.rs  overload_integration.rs  readiness_saturation.rs  request_id_propagation.rs  shutdown_readiness.rs  tutorial_e2e.rs
crates/testing/: Cargo.toml
crates/testing/src/: harness.rs  lib.rs  request_factory.rs  slow_model.rs
crates/testing/tests/: dyn_safety.rs
crates/traits/: Cargo.toml
crates/traits/src/: distributed.rs  kernels.rs  lib.rs  model.rs  sampling.rs  types.rs
crates/traits/tests/: cuda_graph_executor.rs  mod.rs  model_backend.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: app_config_yaml.rs  batch_json_input.rs  gguf_header.rs  openai_http_request.rs  qwen3_config_json.rs  safetensors_header.rs  tokenizer_decode.rs
(+857 files in other folders)
