[workspace]
members = ["crates/core", "crates/model", "crates/server", "crates/traits", "crates/dist", "crates/testing"]
default-members = ["crates/core", "crates/model", "crates/server", "crates/traits", "crates/dist", "crates/testing"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["vLLM-lite Team"]
license = "MIT"
repository = "https://github.com/pplmx/vllm-lite"
homepage = "https://github.com/pplmx/vllm-lite"
rust-version = "1.88"

[workspace.metadata]
description = "A lightweight LLM inference engine in Rust implementing vLLM innovations"
keywords = ["llm", "inference", "vllm", "rust", "machine-learning"]
categories = ["machine-learning", "api-bindings"]

[workspace.dependencies]
proptest = "1.11"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = "0.20"
# NOTE: OpenTelemetry deps were removed in v30.0 Phase 12a
# (see CHANGELOG.md §Dead Dependency Cleanup). The feature gates
# they were behind were no-ops; adding real OTel export is a
# v32+ item per docs/technical-due-diligence/roadmap.md §3.
dashmap = "6.2"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-build = "0.14"
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }

# Core ML stack — pinned to the same version across all crates so a bump is
# a single workspace edit. `candle-core` itself stays optional in `vllm-traits`
# (the candle feature gates it); other crates that always need it pull it
# via { workspace = true }.
candle-core = "0.11.0"
candle-nn = "0.11.0"

# Logging — used by every binary crate; consistent version simplifies
# log-format aggregation in production deployments.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Parking lot — project's CLAUDE.md mandates `parking_lot::Mutex` over
# `std::sync::Mutex` for all scheduler/engine paths (no poison checks,
# 5-10× faster).
parking_lot = "0.12"
async-trait = "0.1"
crossbeam = "0.8"

# Profiling (dev-only; v27.0 H-7)
# Note: pprof 0.15's `criterion` feature pins criterion 0.5, which conflicts
# with our workspace's criterion 0.8. Use `cargo-flamegraph` for criterion
# profiling instead, or pprof's ProfilerGuard API for manual integration.
pprof = { version = "0.15", default-features = false, features = ["flamegraph"] }

# === OpenTelemetry (P43) ===
# Push-based OTLP metrics + traces exporter. Opt-in via the `opentelemetry`
# feature on `vllm-core`. Versions aligned to the 0.32 / 0.33 release line
# as of mid-2026.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.32"
tracing-opentelemetry = "0.33"
opentelemetry-proto = { version = "0.32", features = ["gen-tonic"] }
uuid = { version = "1", features = ["v4"] }

# === Workspace lint policy ===
# Tiers:
#   deny  - breaks CI (`just clippy`)
#   warn  - visible in `cargo clippy`, not blocking
#   allow - explicitly silenced with rationale
#
# Phase A scope: deny correctness/suspicious/perf. Pedantic/nursery stay warn
# so they're visible during local dev but don't break CI. Phase B/C/D fix
# pedantic warnings opportunistically as they touch files.

[workspace.lints.clippy]
# deny tier: correctness / obvious bugs / perf footguns
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# deny tier: lints cleaned to zero by v25.0 Phase E-3
module_name_repetitions = "deny"       # 220 -> 0 (allowed in 117 files for legitimate patterns)
missing_errors_doc = "deny"            # 249 -> 0 (cleaned in E-2)
missing_panics_doc = "deny"            # 36 -> 0 (cleaned in E-2)
uninlined_format_args = "deny"         # 322 -> 0 (cleaned in E-1)
must_use_candidate = "deny"            # 490 -> 0 (cleaned in E-1)
return_self_not_must_use = "deny"      # 109 -> 0 (7 builder methods tagged)
missing_const_for_fn = "deny"          # 341 -> 0 (tonic-generated allow'd in grpc.rs)

# warn tier: pedantic/nursery have ~500 warnings remaining after E-3
# Wholesale deny deferred to a follow-up phase that adds per-file allows
# for legitimate test patterns (float_cmp, unreadable_literal, etc.).
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# allow tier: project-specific rationale
cast_precision_loss = "allow"          # model dim casts are intentional
cast_possible_truncation = "allow"     # same as above
cast_possible_wrap = "allow"           # same as above
cast_sign_loss = "allow"               # same as above
similar_names = "allow"                # tensor-math `q/k/v` shadows permitted
too_many_lines = "allow"               # addressed in Phase D
too_many_arguments = "allow"           # addressed in Phase C/D
multiple_crate_versions = "allow"      # tracked separately

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
