[package]
name = "vllm-fuzz"
version = "0.1.0"
publish = false
edition = "2024"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde-saphyr = "0.0.27"
serde = { version = "1", features = ["derive"] }
safetensors = "0.7.0"

[dependencies.vllm-core]
path = "../crates/core"

[dependencies.vllm-server]
path = "../crates/server"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "app_config_yaml"
path = "fuzz_targets/app_config_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safetensors_header"
path = "fuzz_targets/safetensors_header.rs"
test = false
doc = false
bench = false
