[package]
name = "vllm-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vllm-traits = { path = "../traits", features = ["candle", "kernels"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
async-trait = { workspace = true }
rand = { version = "0.10", features = ["std"] }
serde = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
dashmap = { workspace = true }

[features]
cuda-graph = ["dep:vllm-model"]

[dependencies.vllm-model]
path = "../model"
optional = true

[dev-dependencies]
criterion = "0.8"
pprof = { workspace = true }
proptest = { workspace = true }
vllm-testing = { path = "../testing" }

[[bench]]
name = "radix_cache"
harness = false

[[bench]]
name = "latency_percentiles"
harness = false

[[bench]]
name = "speculative_vs_baseline"
harness = false

[[bench]]
name = "multi_draft_speculative"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "scheduler_benchmarks"
harness = false

[[bench]]
name = "prefix_cache_benchmarks"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false

[lints]
workspace = true
