[package]
name = "vllm-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vllm-traits = { path = "../traits", features = ["candle", "kernels"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
async-trait = { workspace = true }
rand = { version = "0.10", features = ["std"] }
serde = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
uuid = { workspace = true }

[features]
cuda-graph = ["dep:vllm-model"]
multi-node = ["dep:vllm-dist", "dep:vllm-model", "vllm-model/multi-node", "dep:parking_lot"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies.vllm-model]
path = "../model"
optional = true

[dependencies.vllm-dist]
path = "../dist"
optional = true

[dev-dependencies]
candle-core = { workspace = true }
criterion = "0.8"
proptest = { workspace = true }
vllm-testing = { path = "../testing" }

[[bench]]
name = "radix_cache"
harness = false

[[bench]]
name = "latency_percentiles"
harness = false

[[bench]]
name = "speculative_vs_baseline"
harness = false

[[bench]]
name = "multi_draft_speculative"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "scheduler_benchmarks"
harness = false

[[bench]]
name = "prefix_cache_benchmarks"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false

[lints]
workspace = true
