[package]
name = "vllm-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vllm-traits = { path = "../traits", features = ["candle"] }
vllm-dist = { path = "../dist", optional = true }
rand = "0.10"
candle-core = "0.10.2"
candle-nn = "0.10.2"
thiserror = "2"
safetensors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
half = "2"
rayon = "1.12"
memmap2 = "0.9"
tiktoken = "3"
tokenizers = "0.22"
gguf = { version = "0.1", optional = true }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
vllm-testing = { path = "../testing" }
criterion = "0.8"

[[bench]]
name = "gqa_forward"
harness = false

[[bench]]
name = "mla_forward"
harness = false

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
gguf = ["dep:gguf"]
multi-node = ["dep:vllm-dist"]
full = ["cuda", "gguf"]

[lints]
workspace = true
