[package]
name = "vllm-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vllm-traits = { path = "../traits", features = ["candle", "kernels"] }
vllm-dist = { path = "../dist", optional = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
thiserror = { workspace = true }
safetensors = "0.8.0"
serde = { workspace = true }
serde_json = { workspace = true }
half = "2"
rayon = "1.12"
memmap2 = "0.9"
tokenizers = "0.23"
gguf = { version = "0.1", optional = true }
tracing = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
tempfile = "3"
vllm-testing = { path = "../testing" }
criterion = "0.8"

[[bench]]
name = "gqa_forward"
harness = false

[[bench]]
name = "mla_forward"
harness = false

[[bench]]
name = "flash_attention"
harness = false

[[bench]]
name = "paged_kv_cache"
harness = false

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
gguf = ["dep:gguf"]
multi-node = ["dep:vllm-dist", "dep:async-trait", "dep:tokio"]
full = ["cuda", "gguf"]

[lints]
workspace = true

# cargo-machete sees `gguf` as unused because the `gguf` feature isn't
# enabled by default. The dep is required for the feature, which is
# enabled via `--features gguf` or `--features full`.
[package.metadata.cargo-machete]
ignored = ["gguf"]
