[package]
name = "vllm-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "vllm_server"
path = "src/lib.rs"

[[bin]]
name = "vllm-server"
path = "src/main.rs"

[[bin]]
name = "vllm"
path = "src/bin/vllm.rs"

[dependencies]
vllm-core = { path = "../core" }
vllm-traits = { path = "../traits" }
vllm-model = { path = "../model" }
candle-core = "0.10.2"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "fs", "net", "signal"] }
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum = { version = "0.7", features = ["tokio", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
