[package]
name = "vllm-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "vllm_server"
path = "src/lib.rs"

[[bin]]
name = "vllm-server"
path = "src/main.rs"

[[bin]]
name = "vllm"
path = "src/bin/vllm.rs"

[dependencies]
vllm-core = { path = "../core", features = ["cuda-graph"] }
vllm-traits = { path = "../traits" }
vllm-model = { path = "../model" }
candle-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "io-util", "fs", "net", "signal"] }
axum = { version = "0.8", features = ["tokio", "macros"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["limit"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0.28"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = { workspace = true }
anyhow = "1"
tokio-rustls = "0.26"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[dev-dependencies]
axum = { version = "0.8", features = ["tokio", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"

[lints]
workspace = true
