[package]
name = "vllm-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "vllm_server"
path = "src/lib.rs"

[[bin]]
name = "vllm-server"
path = "src/main.rs"

[[bin]]
name = "vllm"
path = "src/bin/vllm.rs"

[dependencies]
vllm-core = { path = "../core", default-features = false }
vllm-traits = { path = "../traits", features = ["candle"] }
vllm-model = { path = "../model" }
candle-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "io-util", "fs", "net", "signal"] }
axum = { version = "0.8", features = ["tokio", "macros"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["limit"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0.28"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = { workspace = true }
anyhow = "1"
tokio-rustls = "0.26"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[dev-dependencies]
axum = { version = "0.8", features = ["tokio", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"

[features]
# Enable CUDA-graph capture/replay through vllm-core. Off by default so
# minimal deployments don't pull in the GPU-side graph types.
cuda-graph = ["vllm-core/cuda-graph"]
# Enable multi-node KV block transfer (Phase 41 OPS-32a second-half).
# Off by default so single-node deployments don't pull in the gRPC
# server types. When on, the engine builder path is selected in
# `bootstrap/engine.rs` when `server.multi_node.enabled = true`.
multi-node = ["vllm-core/multi-node", "vllm-model/multi-node"]

[lints]
workspace = true
