[package]
name = "vllm-testing"
version.workspace = true
edition.workspace = true

[dependencies]
vllm-traits = { path = "../traits", features = ["candle"] }
vllm-core = { path = "../core" }
candle-core = "0.10.2"
tokio = { version = "1", features = ["sync"] }
rand = "0.10"

[dev-dependencies]
criterion = "0.8"
proptest = "1.5"

[features]
default = []
cuda = ["candle-core/cuda"]
