[package]
name = "vllm-traits"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
candle-core = { version = "0.11.0", optional = true }

[features]
default = []
candle = ["candle-core"]
kernels = []

[lints]
workspace = true
