[package]
name = "vllm-traits"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
candle-core = { workspace = true, optional = true }

[features]
default = []
candle = ["candle-core"]
kernels = []

[lints]
workspace = true
